<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_step_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:padding="@dimen/padding_8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimaryDark" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layout_for_videos"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/playerView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/exo_player_height" />

    </RelativeLayout>



    <ImageView
        android:id="@+id/iv_imageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/exo_player_height"
        android:adjustViewBounds="true"
        android:contentDescription="@string/step_image"
        android:scaleType="fitXY" />

    <LinearLayout
        android:id="@+id/layout_for_step_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:orientation="horizontal"
        android:weightSum="2">


        <TextView
            android:id="@+id/tv_previous_step"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_8dp"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_weight="1"
            android:gravity="center|start"
            android:text="@string/details_step_previous_step"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />


        <TextView
            android:id="@+id/tv_next_step"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:layout_marginRight="@dimen/margin_8dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/details_step_next_step"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />


    </LinearLayout>

    <TextView
        android:id="@+id/tv_step_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorPrimaryDark" />


</LinearLayout>

