<?xml version="1.0" encoding="utf-8"?>

<FrameLayout android:id="@+id/container_master"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scaleType="centerInside"
    xmlns:android="http://schemas.android.com/apk/res/android" />


