<resources>
    <string name="app_name">Baking Magic</string>

    <string name="details_title_ingredients">Ingredients</string>
    <string name="app_ingredients">Ingredients</string>
    <string name="previous_step">Previous Step</string>
    <string name="next_step">Next Step</string>
    <string name="details_step_previous_step">Previous Step</string>
    <string name="details_step_next_step">Next Step</string>
    <string name="nag_divider"> | </string>
    <string name="step_image">Step Image</string>
    <string name="appwidget_text">Baking Magic</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_view_text">No favorite recipe found...</string>
    <string name="action_favorite">Favorite</string>
    <string name="pref_fav_recipe_id">pref recipe id</string>
    <string name="toast_fav_new">This recipe is now your favorite.</string>
    <string name="toast_fav_old">You no longer have a favorite recipe.</string>
    <string name="widget_title_ingredients">Ingredients Required For</string>
    <string name="main_screen_image">Main Screen Image</string>

    <string name="title_activity__full_screen">Activity_FullScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="error_no_internet">Could not retrieve recipes - no internet.</string>
    <string name="no_data_available">Recipes could not be downloaded - no internet.</string>
</resources>
